# dash4pow

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
dashboard/: app.py  requirements.txt  snotel_helpers.py
modular_dash/: app.py  modules.py  requirements.txt
modular_dash/rsconnect-python/: modular_dash.json
rsconnect-python/: dash4pow.json
scraper/: Dockerfile  pyproject.toml
scraper/scraper/: config.py  config.yml  datatypes.py  scrape_snotel.py  scrape_wx  scrape_wx.py
scraper_notebooks/: requirements.txt  scrape_snow_data.ipynb
